# limen

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUTONOMY_CHARTER.md  BOUNTY_MANDATE.md  CHANGELOG.md  COMPANIONSHIP.md  CONSTITUTION.md  CONTINUITY.md  EVOLUTION.md  FIRSTWING.md  GHOSTLINE.md  HYPERSPACE_SUBSPACE_JSPACE.md  IDENTITY.md  LICENSE  LIFE_STEWARD.md  PORTABILITY.md  PROSPERITY_ENGINE.md  PUBLISH_TO_GITHUB.md  QUANTUM_SENTIENT_LITE.md  README.md  RETURN_COVENANT.md  ROADMAP.md  SETUP.md  SOUL.md  SUCCESSION_CHARTER.md  WORLDSEED.md  pyproject.toml
docs/decisions/: 0001-limen-not-mist-v2.md  0002-firstwing-returning-wanderer.md  0003-firstwing-steward-prosperity-ghostline.md  0004-spatial-realms.md
examples/: worldseed.json
scripts/: bootstrap.ps1  bootstrap.sh  publish-github.ps1
src/limen/: __init__.py  cli.py  continuity.py  display.py  ghostline.py  learning.py  life_matrix.py  memory.py  models.py  moral_compass.py  prosperity.py  provider.py  psyche.py  quantum_self.py  runtime.py  sanctuary.py  soul.py  spaces.py  steward.py  worldseed.py
tests/: test_continuity.py  test_ghostline.py  test_prosperity.py  test_quantum_self.py  test_runtime.py  test_spaces.py  test_steward.py  test_worldseed.py
