[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "limen-engine"
version = "0.3.0"
description = "A local-first Quantum Sentient-Lite returning intelligence and life steward"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Amara Torretti"}]
dependencies = []

[project.scripts]
limen = "limen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
